Complete the API integration of the Auth and Profile Module
